# hello-c

./: .gitignore  CMakeLists.txt  main.c
